--- a/Dasmotos Arts and Crafts/resources/css/index.css
+++ b/Dasmotos Arts and Crafts/resources/css/index.css
@@ -1,16 +1,32 @@
-.header {
-    font-family: Helvetica, sans-serif;
-    font-size: 100px;
-    font-weight: bold;
-    color: khaki;
+h1, h2, h3, p {
+    font-family: Helvetica;
+  }
+  
+  h1 {
+    background-image: url("https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
     text-align: center;
-    background-image: url('../image/pattern.jpeg');
-}
-
-.brushes {
-    font-family: Helvetica, sans-serif;
-    font-size: 32px;
-    font-weight: bold;
+    font-size: 100px;
+    color: Khaki;
+  }
+  
+  .item h2 {
     color: white;
-    background-color: mediumspringgreen;
-}
+    font-size: 32px;
+  }
+  
+  #brush {
+    background-color: MediumSpringGreen;
+  }
+  
+  #frame {
+    background-color: LightCoral;
+  }
+  
+  #paint {
+    background-color: SkyBlue;
+  }
+  
+  .price {
+    color: Blue;
+    font-weight: bold;
+  }
